--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.13.12
+@version        1.13.13
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1332,12 +1332,13 @@ div[style*='#F3F3F3;'],
 }
 
 
+.ivmbox[style*='background-color: #fdf2d5'], /* "ArbCom 2025 Elections voter message" https://en.wikipedia.org/wiki/User_talk:Vitaly_Zdanevich */
 .flaggedrevs-unreviewed, /* https://ru.wikipedia.org/wiki/Служебная:Вклад/Vitaly_Zdanevich */
 div[style='background-color:#d4e4f4;'], /* H1 https://be.wiktionary.org/wiki/спатканне */
 .ns-0 #mw-content-text h1 /* https://ru.wiktionary.org/wiki/лозняк */
 {
 	background: #123 !important;
-	border: 0;
+	border: 0 !important;
 }
 
 /* Here https://be.wiktionary.org/w/index.php?fulltext=1&search=верашчака&title=Адмысловае%3ASearch&ns0=1 labels "Сартаваць паводле рэлевантнасці" */
