--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.13.13
+@version        1.13.14
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1057,7 +1057,7 @@ p:not(.ve-ce-branchNode.ve-ce-contentBranchNode.ve-ce-paragraphNode.ve-ce-genera
 dl, /* Talk page - comment body */
 center /* https://be.wikipedia.org/wiki/Вікіпедыя:Спасылкі_на_крыніцы  */,
 .noprint,
-ul li, /* For example this list https://ru.wikipedia.org/wiki/Рудня_(Червенский_район)#Население  */
+.mw-heading.mw-heading2 + ul li, /* For example this list https://ru.wikipedia.org/wiki/Рудня_(Червенский_район)#Население  */
 ol li:not(.rt-target), /* Wikipedia: sources list */
 aside a, 
 aside p, /* related articles: titles & second line with desc*/
