--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.13.41
+@version        1.13.42
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1068,6 +1068,8 @@ div.div-col ul li, /* https://en.wikipedia.org/wiki/As_Good_as_It_Gets#Cast */
 
 .searchalttitle, /* https://en.wikipedia.org/wiki/Special:Search?search=Krig+7-B&sourceid=Mozilla-search&ns0=1 */
 .iw-result__content,
+
+.mw-uctop, /* "(current)" https://en.wikipedia.org/wiki/Special:Contributions/Vitaly_Zdanevich */
 
 .block-indent /* https://be.wikipedia.org/wiki/Вікіпедыя:Адказы_на_частую_крытыку */
 {
