--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.13.46
+@version        1.13.47
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1610,8 +1610,10 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 		margin-bottom: 26px;
 	}
 
-	/* Category: make thumbnails bigger https://commons.wikimedia.org/wiki/Category:Church_of_the_Immaculate_Conception_of_Blessed_Virgin_Mary_and_the_convent_of_Bernardine_in_Slonim */
-	a.mw-file-description img {
+	/* Category: make thumbnails bigger https://commons.wikimedia.org/wiki/Category:Church_of_the_Immaculate_Conception_of_Blessed_Virgin_Mary_and_the_convent_of_Bernardine_in_Slonim
+	 * Another page to check - flags here at the top https://commons.wikimedia.org/wiki/Category:Wikimedia_CEE_Meeting_2024 */
+	 * */
+	.gallery a.mw-file-description img {
 		width: 100% !important;
 		height: 100% !important;
 	}
