--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.13.51
+@version        1.13.52
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -567,6 +567,9 @@ td:has(> [title^='Wikipedia:Babel/List']), /* https://en.wikipedia.org/wiki/Wiki
 .cquote.pullquote, /* https://en.wikipedia.org/wiki/Wikipedia:Purpose */
 
 table[style='margin:auto;'] tr[style='text-align:right;'] td[style='padding:0 1em'], /* Table https://en.wikipedia.org/wiki/Pythagorean_triple#Examples */
+
+.mw-collapsible-content.collapse-mobile-content ul li,
+/* Expand "Examples of projects we fund as part of annual plan" https://meta.wikimedia.org/wiki/Grants:Programs/Wikimedia_Community_Fund/General_Support_Fund#What_we_fund */
 
 .divbox.divbox-gray, /* "Your submission at Articles for creation: David A. Clark (September 30)" https://en.wikipedia.org/w/index.php?title=User_talk:Vitaly_Zdanevich&oldid=1322774397#Your_submission_at_Articles_for_creation:_David_A._Clark_(September_30) */
 [style='background: #F9F9F9; border-width:1px; border-color: #ababab; padding: 0px; width: 100%;'] .mw-collapsible.mw-made-collapsible th[colspan='2'], /* Right https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
