--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.13.52
+@version        1.13.53
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1084,6 +1084,9 @@ div.div-col ul li, /* https://en.wikipedia.org/wiki/As_Good_as_It_Gets#Cast */
 .mw-tag-marker.mw-tag-marker-mw-reverted, /* "Reverted" https://en.wikipedia.org/wiki/Special:Contributions/Vitaly_Zdanevich */
 
 link[rel='mw-deduplicated-inline-style'] + span[style='color:black'], /* https://en.wikipedia.org/wiki/The_Game_Awards_2025 */
+
+div.mw-heading.mw-heading2 + div i,
+/* "For further information, see... "https://meta.wikimedia.org/wiki/Grants:Programs/Wikimedia_Community_Fund/General_Support_Fund#Application_process */
 
 .block-indent /* https://be.wikipedia.org/wiki/Вікіпедыя:Адказы_на_частую_крытыку */
 {
