--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.13.53
+@version        1.13.54
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -262,6 +262,9 @@ li.gallerybox div.thumb, /* https://commons.wikimedia.org/wiki/Category:Historic
 	/* Without this - on pages like https://meta.wikimedia.org/wiki/User:Vitaly_Zdanevich/global.js "User Page", "Discussion" will use more space */
 	height: initial;
 }
+
+img[alt='(_AT_)'],
+/* Emails @ sign https://meta.wikimedia.org/wiki/Grants:Programs/Wikimedia_Community_Fund/General_Support_Fund#Contact_us */
 
 .ve-init-mw-editSwitch .oo-ui-popupToolGroup.oo-ui-iconElement .oo-ui-popupToolGroup-handle, /* Edit page: right button with switch between source and visual editors */
 #left-navigation .vector-menu-content-list { /* Buttons "Page", "Discussion" */
