--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.13.59
+@version        1.13.60
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -659,11 +659,14 @@ kbd[style*='background:#EEEEEE'],
 	background: #131 !important;  /* Darkgreen */
 }
 
+.layouttemplate[style='clear:both; margin:0.5em auto; color: inherit; background-color: var(--background-color-success-subtle, #e8f8e8); border:2px solid #80d080; padding:8px;'],
+/* "This screenshot either does not contain copyright-eligible parts or visuals of copyrighted software..." https://commons.wikimedia.org/wiki/File:Packages_gentoo_org--use-flags-for-ffmpeg.png */
+
 #ext-WikiEditor-bottom-dragbar, /* Editor https://commons.wikimedia.org/w/index.php?title=File:Globustut_521_Геранены,_костел.jpg&action=edit */
 .mw-parser-output .wst-header .wst-header-mainblock /* https://en.wikisource.org/wiki/Alice%27s_Adventures_in_Wonderland_(1907)/Chapter_8 */
 {
 	background: #131 !important;  /* Darkgreen */
-	border: none;
+	border: none !important;
 }
 
 .mw-parser-output .current-events-nav a, /* Bottom navigation with dates https://en.wikipedia.org/wiki/Portal:Current_events/2005_June_28 */
