--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.13.63
+@version        1.13.64
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -267,6 +267,7 @@ li.gallerybox div.thumb, /* https://commons.wikimedia.org/wiki/Category:Historic
 img[alt='(_AT_)'],
 /* Emails @ sign https://meta.wikimedia.org/wiki/Grants:Programs/Wikimedia_Community_Fund/General_Support_Fund#Contact_us */
 
+.ve-ui-citoidInspector-sourceSelect span[class^='oo-ui-iconElement-icon oo-ui-icon-'], /* Wikipedia: "Add a citation" popup: "Manual" tab: icons */
 .ve-init-mw-editSwitch .oo-ui-popupToolGroup.oo-ui-iconElement .oo-ui-popupToolGroup-handle, /* Edit page: right button with switch between source and visual editors */
 #left-navigation .vector-menu-content-list { /* Buttons "Page", "Discussion" */
 	filter: invert();
