--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -147,6 +147,7 @@ a[title='Log out'],
 [style='background:#d0f5e5; border:1px solid #a6c4b5; text-align:left; margin:1px; margin-bottom: 1px; padding:3px;'], /* Bottom https://be.wikisource.org/wiki/Галоўная_старонка */
 [style='background:#ffe9a6; border:1px solid #dcbe73; text-align:left; margin:1px; margin-bottom: 1px; padding:3px;'], /* Bottom https://be.wikisource.org/wiki/Галоўная_старонка */
 .ve-ui-mwTemplatePage-description, /* Template description - for example when adding ref manually */
+.ve-ui-citeSourceSelectWidget-separator, /* Wikipedia: "Add a citation" popup: "Manual" tab: separator line */
 .mw-newarticletext div[style*='background:#F8FFFF']:first-child /* Help text in Wiktionary edit screen */
 {
 	display: none !important;
